# dewatermarking

./: .gitignore  README.md  pyproject.toml
dewatermarking/: commons.py  detect.py  evaluate.py  generate.py  mersenne.py  pipeline.py  rephrase.py  utils.py
dewatermarking/StyleRemix/: quickstart.py
dewatermarking/watermark/: extended_watermark_processor.py  normalizers.py
dewatermarking/wm/: detector.py  generator.py
experiments/: main.py
